<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Mainpagefive"
    android:background="@drawable/ic_maino">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:fontFamily="@font/audiowide_regular"
        android:text="@string/mainpage"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button1"
                android:layout_width="313dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@drawable/custom_mainpage"
                android:fontFamily="@font/aclonica_regular"
                android:text="@string/button1"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button2"
                android:layout_width="313dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_mainpage"
                android:fontFamily="@font/aclonica_regular"
                android:text="@string/button"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button3"
                android:layout_width="313dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/custom_mainpage"
                android:fontFamily="@font/aclonica_regular"
                android:text="@string/button2"
                android:textColor="@color/black"
                app:backgroundTint="@color/white"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button4"
                android:layout_width="382dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="35dp"
                android:background="@drawable/custom_mainpage"
                android:fontFamily="@font/aclonica_regular"
                android:text="@string/home_button"
                android:textColor="@color/white"
                app:backgroundTint="@color/black"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>